--- a/src/game/main.fxml
+++ b/src/game/main.fxml
@@ -1,5 +1,5 @@
 <?import javafx.scene.layout.GridPane?>
 
-<GridPane fx:controller="sample.Controller"
+<GridPane fx:controller="game.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 </GridPane>
