Code Refactored 1. Merged Yu's code 2. Modified existing Controller classes and its methods

--- a/src/resources/map_viewer.fxml
+++ b/src/resources/map_viewer.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="459.0" prefWidth="726.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="484.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane gridLinesVisible="true" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="205.0">
             <columnConstraints>
@@ -52,27 +53,53 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField GridPane.columnIndex="1" />
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="wrapTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="imageTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="authorTextField" GridPane.columnIndex="1" />
+                <TextField fx:id="scrollTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="warnTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             </children>
         </GridPane>
-      <Pane layoutX="14.0" layoutY="230.0" prefHeight="200.0" prefWidth="205.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="481.0" AnchorPane.topAnchor="230.0">
+      <Pane layoutX="232.0" layoutY="17.0" prefHeight="189.0" prefWidth="207.0" AnchorPane.bottomAnchor="278.0" AnchorPane.leftAnchor="232.0" AnchorPane.rightAnchor="505.0" AnchorPane.topAnchor="17.0">
          <children>
             <TextField layoutX="93.0" layoutY="14.0" prefHeight="25.0" prefWidth="101.0" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="5.0" layoutY="18.0" prefHeight="17.0" prefWidth="64.0" text="Continent" />
             <Label contentDisplay="CENTER" layoutX="13.0" layoutY="52.0" prefHeight="17.0" prefWidth="57.0" text="Value" />
             <TextField layoutX="93.0" layoutY="49.0" prefHeight="25.0" prefWidth="101.0" />
-            <Button layoutX="27.0" layoutY="84.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="148.0" text="Add" />
+            <Button layoutX="27.0" layoutY="84.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
             <Button layoutX="28.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="148.0" text="Update" />
-            <Button layoutX="27.0" layoutY="155.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="148.0" text="Delete" />
+            <Button layoutX="112.0" layoutY="84.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
          </children>
       </Pane>
-      <ListView layoutX="443.0" layoutY="14.0" prefHeight="185.0" prefWidth="205.0" />
-      <ListView layoutX="238.0" layoutY="13.0" prefHeight="401.0" prefWidth="205.0" />
-      <ListView layoutX="461.0" layoutY="214.0" prefHeight="200.0" prefWidth="220.0" />
+      <ListView layoutX="233.0" layoutY="214.0" prefHeight="213.0" prefWidth="207.0" />
+      <ListView layoutX="471.0" layoutY="217.0" prefHeight="210.0" prefWidth="205.0" />
+      <Pane layoutX="462.0" layoutY="14.0" prefHeight="210.0" prefWidth="207.0">
+         <children>
+            <TextField layoutX="93.0" layoutY="52.0" prefHeight="25.0" prefWidth="101.0" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="5.0" layoutY="56.0" prefHeight="17.0" prefWidth="64.0" text="Territory" />
+            <Label contentDisplay="CENTER" layoutX="17.0" layoutY="91.0" prefHeight="17.0" prefWidth="57.0" text="Latitude" />
+            <TextField layoutX="93.0" layoutY="87.0" prefHeight="25.0" prefWidth="101.0" />
+            <Button layoutX="28.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
+            <Button layoutX="27.0" layoutY="165.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="148.0" text="Update" />
+            <Button layoutX="109.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
+            <ComboBox layoutX="15.0" layoutY="14.0" prefHeight="25.0" prefWidth="180.0" />
+         </children>
+      </Pane>
+      <ListView layoutX="704.0" layoutY="216.0" prefHeight="210.0" prefWidth="205.0" />
+      <Button fx:id="saveMapButoon" layoutX="14.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Save Map" />
+      <Button layoutX="123.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Exit" />
+      <Pane layoutX="676.0" layoutY="14.0" prefHeight="199.0" prefWidth="233.0">
+         <children>
+            <TextField layoutX="109.0" layoutY="52.0" prefHeight="25.0" prefWidth="101.0" />
+            <Label contentDisplay="CENTER" layoutX="9.0" layoutY="90.0" prefHeight="17.0" prefWidth="57.0" text="Latitude" />
+            <TextField layoutX="109.0" layoutY="86.0" prefHeight="25.0" prefWidth="101.0" />
+            <Button layoutX="28.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
+            <Button layoutX="27.0" layoutY="165.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="148.0" text="Update" />
+            <Button layoutX="109.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
+            <ComboBox layoutX="15.0" layoutY="14.0" prefHeight="25.0" prefWidth="195.0" />
+            <Label alignment="TOP_LEFT" layoutX="10.0" layoutY="54.0" prefHeight="48.0" prefWidth="101.0" text="Adjacent Territory" />
+         </children>
+      </Pane>
     </children>
    <effect>
       <InnerShadow blurType="ONE_PASS_BOX" color="WHITE" />
