--- a/src/resources/map_viewer.fxml
+++ b/src/resources/map_viewer.fxml
@@ -88,8 +88,8 @@
          </children>
       </Pane>
       <ListView fx:id="adjacentTerritoriesListView" layoutX="692.0" layoutY="222.0" prefHeight="210.0" prefWidth="217.0" />
-      <Button fx:id="saveMapButoon" layoutX="14.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Save Map" />
-      <Button layoutX="123.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Exit" />
+      <Button fx:id="saveMapButton" layoutX="14.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Save Map" />
+      <Button fx:id="exitMapEditorButton" layoutX="123.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Exit" />
       <Pane layoutX="692.0" layoutY="14.0" prefHeight="199.0" prefWidth="217.0" style="-fx-background-color: #c6cad1;">
          <children>
             <TextField fx:id="adjacentTerritoryTextField" layoutX="117.0" layoutY="52.0" prefHeight="25.0" prefWidth="93.0" />
