--- a/src/resources/map_viewer.fxml
+++ b/src/resources/map_viewer.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="484.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="484.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane gridLinesVisible="true" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="205.0">
             <columnConstraints>
@@ -92,11 +92,12 @@
       <Button fx:id="exitMapEditorButton" layoutX="123.0" layoutY="387.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" text="Exit" />
       <Pane layoutX="692.0" layoutY="14.0" prefHeight="199.0" prefWidth="217.0" style="-fx-background-color: #c6cad1;">
          <children>
-            <TextField fx:id="adjacentTerritoryTextField" layoutX="117.0" layoutY="52.0" prefHeight="25.0" prefWidth="93.0" />
-            <Button layoutX="30.0" layoutY="98.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
-            <Button layoutX="112.0" layoutY="97.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
-            <ComboBox fx:id="territoriesComboBox" layoutX="5.0" layoutY="14.0" prefHeight="25.0" prefWidth="205.0" />
-            <Label alignment="TOP_LEFT" layoutX="13.0" layoutY="54.0" prefHeight="48.0" prefWidth="101.0" text="Adjacent Territory" />
+            <Label alignment="TOP_LEFT" layoutX="7.0" layoutY="7.0" prefHeight="20.0" prefWidth="101.0" text="Territory" />
+            <Button layoutX="30.0" layoutY="148.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
+            <Button layoutX="112.0" layoutY="147.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
+            <ComboBox fx:id="territoriesComboBox" layoutX="5.0" layoutY="35.0" prefHeight="25.0" prefWidth="205.0" />
+            <Label alignment="TOP_LEFT" layoutX="13.0" layoutY="68.0" prefHeight="20.0" prefWidth="101.0" text="Adjacent Territory" />
+            <ComboBox fx:id="adjacentTerritoriesComboBox" layoutX="5.0" layoutY="87.0" prefHeight="25.0" prefWidth="205.0" />
          </children>
       </Pane>
     </children>
