--- a/src/resources/map_viewer.fxml
+++ b/src/resources/map_viewer.fxml
@@ -93,8 +93,8 @@
       <Pane layoutX="692.0" layoutY="14.0" prefHeight="199.0" prefWidth="217.0" style="-fx-background-color: #c6cad1;">
          <children>
             <Label alignment="TOP_LEFT" layoutX="7.0" layoutY="7.0" prefHeight="20.0" prefWidth="101.0" text="Territory" />
-            <Button layoutX="30.0" layoutY="148.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
-            <Button layoutX="112.0" layoutY="147.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
+            <Button fx:id="addAdjacentTerritoryButton" layoutX="30.0" layoutY="148.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Add" />
+            <Button fx:id="deleteAdjacentTerritoryButton" layoutX="112.0" layoutY="147.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" text="Delete" />
             <ComboBox fx:id="territoriesComboBox" layoutX="5.0" layoutY="35.0" prefHeight="25.0" prefWidth="205.0" />
             <Label alignment="TOP_LEFT" layoutX="12.0" layoutY="68.0" prefHeight="20.0" prefWidth="101.0" text="Select Adjacent Territory" />
             <ComboBox fx:id="adjacentTerritoriesComboBox" layoutX="5.0" layoutY="87.0" prefHeight="25.0" prefWidth="205.0" />
