--- a/src/resources/main_menu.fxml
+++ b/src/resources/main_menu.fxml
@@ -19,9 +19,10 @@
         <RowConstraints />
     </rowConstraints>
     <children>
-        <Button fx:id="newGameButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="New Game" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Button fx:id="newGameButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Single Game Mode" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Button fx:id="tournamentButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Tournament Mode" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <Button fx:id="mapEditorButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Map Editor" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <Button fx:id="quitGameButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Quit Game" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Button fx:id="loadGameButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Load Game" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Button fx:id="mapEditorButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Map Editor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Button fx:id="quitGameButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="145.0" text="Quit Game" GridPane.columnIndex="1" GridPane.rowIndex="5" />
     </children>
 </GridPane>
